--- a/PyCitySchools/PyCitySchools_code.ipynb
+++ b/PyCitySchools/PyCitySchools_code.ipynb
@@ -7,13 +7,13 @@
    "source": [
     "# PyCity Schools Analysis\n",
     "\n",
-    "In this analysis I came to the conclusion that:\n",
+    "In addition to comprehensive information about the city's schools, I also got to analize been the math and reading scores of every student. \n",
     "\n",
-    "-Schools with higher budget do not have better results as a whole. schools with higher spending 645-675 per student actually underperformed compared to schools with smaller budgets.\n",
+    "Turns out, most students did better in reading than in math. About 86% passed reading, but only 75% passed math.\n",
     "\n",
-    "-Smaller and medium size schools dramatically out-performed large sized schools.\n",
+    "The 'per_school_summary' breaks down how well each school did. Cabrera High School, a Charter school, did the best with a 91.3% passing rate. Rodriguez High School, a District school, did the worst with only 53% passing. Looking deeper, Charter schools generally have way better passing rates (over 35% higher) than District schools.\n",
     "\n",
-    "-Charter schools in general out-performed public schools."
+    "Now, talking about school size and performance, the 'size_summary' shows a kind of negative connection. Small and medium-sized schools have similar success levels. But in big schools, both average scores and passing rates drop a lot. Like, in small and medium-sized schools, 90% passed, but in big schools, only 58% did."
    ]
   },
   {
