--- a/PyCitySchools/PyCitySchools_code.ipynb
+++ b/PyCitySchools/PyCitySchools_code.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# PyCity Schools Analysis\n",
     "\n",
-    "In addition to comprehensive information about the city's schools, I also got to analize been the math and reading scores of every student. \n",
+    "In addition to comprehensive information about the city's schools, I also analized the math and reading scores of every student. \n",
     "\n",
     "Turns out, most students did better in reading than in math. About 86% passed reading, but only 75% passed math.\n",
     "\n",
